--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Ajaykondath.GitHub.io by AjayKondath</title>
+    <title>AjayKondath</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Ajaykondath.GitHub.io</h1>
-        <h2></h2>
+        <h1>Ajay kondath</h1>
+        <h2>Software Developer</h2>
         <a href="https://github.com/AjayKondath" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
