--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Ajay kondath</h1>
-        <h2>Software Developer</h2>
+        <h2>Software Developer/Analyst</h2>
         <a href="https://github.com/AjayKondath" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
@@ -29,9 +29,15 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<p>An IT professional with 5 years of academic Knowledge specializing in software development. I have completed my Bachelor’s degree in Computer Science from Bharathiar University, India and I am currently pursuing Information Technology Solutions Postgraduate Certification at Humber College.</p></br>
+
+<p>I have 3 years of work experience in Information Technology and I have worked in multinational companies like Infosys, Concentrix, Ontario Home Services on the projects of Cisco, VMware and Enbridge respectively.</p></br>
+
+<p>Through my experience I have some significant skills on subjects like <code>HTML 5, CSS, JavaScript, JQuery, AngularJS, Ruby, Python, Java, C #, PHP, SQL</code>. I am an upright individual who buckles down and pays attention to detail. I'm adaptable, fast to get new abilities and enthusiastic to learn from others. I am hard-working, dedicated, motivated, and a fabulous cooperative person with great relational abilities.
+</p></br>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
