--- a/event-forum.html
+++ b/event-forum.html
@@ -46,7 +46,7 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="scroll active"><a href="#home">Home</a></li>
+                        <li class="scroll active"><a href="index.html">Home</a></li>
                                              
                     </ul>
                 </div>
@@ -141,17 +141,17 @@
                     &copy; 2014 Sylvenie Lindor. 
                 </div>
                 <div class="col-sm-6">
-                    <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                   <ul class="social-icons">
+                        <li><a href="https://www.facebook.com/The-Sylvenie-Lindor-Foundation-1560617847484477/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                        <li><a href="https://plus.google.com/110673219289258138668/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                        <li><a href="#"><i class="fa fa-flickr"></i></a></li> -->
+                        <li><a href="https://www.youtube.com/channel/UCAExpVrbgDTA_HSDtNusdHA" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://ca.linkedin.com/in/amikley-fontaine-b-a-hons-8a914a43" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-github"></i></a></li> -->
                     </ul>
                 </div>
             </div>
