--- a/gallery.html
+++ b/gallery.html
@@ -46,15 +46,15 @@
 				
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="scroll active"><a href="#home">Home</a></li>
-                        <li class="scroll"><a href="#features">Features</a></li>
+                        <li class="scroll active"><a href="index.html">Home</a></li>
+                        <!-- <li class="scroll"><a href="#features">Features</a></li>
                         <li class="scroll"><a href="#services">Services</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="scroll"><a href="#about">About</a></li>
                         <li class="scroll"><a href="#meet-team">Team</a></li>
                         <li class="scroll"><a href="#pricing">Pricing</a></li>
                         <li class="scroll"><a href="#blog">Blog</a></li> 
-                        <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
+                        <li class="scroll"><a href="#get-in-touch">Contact</a></li>  -->                       
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -625,16 +625,16 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                        <li><a href="https://www.facebook.com/The-Sylvenie-Lindor-Foundation-1560617847484477/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                        <li><a href="https://plus.google.com/110673219289258138668/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                        <li><a href="#"><i class="fa fa-flickr"></i></a></li> -->
+                        <li><a href="https://www.youtube.com/channel/UCAExpVrbgDTA_HSDtNusdHA" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://ca.linkedin.com/in/amikley-fontaine-b-a-hons-8a914a43" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-github"></i></a></li> -->
                     </ul>
                 </div>
             </div>
