--- a/hymc.html
+++ b/hymc.html
@@ -46,15 +46,15 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="scroll active"><a href="#home">Home</a></li>
-                        <li class="scroll"><a href="#features">Features</a></li>
+                        <li class="scroll active"><a href="index.html">Home</a></li>
+                       <!--  <li class="scroll"><a href="#features">Features</a></li>
                         <li class="scroll"><a href="#services">Services</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="scroll"><a href="#about">About</a></li>
                         <li class="scroll"><a href="#meet-team">Team</a></li>
                         <li class="scroll"><a href="#pricing">Pricing</a></li>
                         <li class="scroll"><a href="#blog">Blog</a></li> 
-                        <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
+                        <li class="scroll"><a href="#get-in-touch">Contact</a></li>    -->                     
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -63,7 +63,7 @@
     <section id="cta2" style='background: rgb(36, 42, 51) url("./images/cta2/event.jpg") no-repeat scroll 50% 50%; padding-top: 266px;' >
         <div class="container">
             <div class="text-center" style="margin-top: -12em;">
-                <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms"><span style="color: rgb(186, 166, 169);">About us</span></h2>
+                <!-- <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms"><span style="color: rgb(186, 166, 169);">About us</span></h2> -->
                <!-- <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">Help Children in need succeed through Education - Help us inspire this new generation.</p>
                
                  <img class="img-responsive wow fadeIn" src="images/cta2/cta2-img.png" alt="" data-wow-duration="300ms" data-wow-delay="300ms"> -->
@@ -98,17 +98,17 @@
                     &copy; 2014 Sylvenie Lindor. 
                 </div>
                 <div class="col-sm-6">
-                    <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                   <ul class="social-icons">
+                        <li><a href="https://www.facebook.com/The-Sylvenie-Lindor-Foundation-1560617847484477/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                        <li><a href="https://plus.google.com/110673219289258138668/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                        <li><a href="#"><i class="fa fa-flickr"></i></a></li> -->
+                        <li><a href="https://www.youtube.com/channel/UCAExpVrbgDTA_HSDtNusdHA" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://ca.linkedin.com/in/amikley-fontaine-b-a-hons-8a914a43" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-github"></i></a></li> -->
                     </ul>
                 </div>
             </div>
