--- a/football.html
+++ b/football.html
@@ -47,8 +47,8 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="index.html">Home</a></li>
-                        <!-- <li class="scroll"><a href="#features">Features</a></li>
-                        <li class="scroll"><a href="#services">Services</a></li>
+                         <li class="scroll"><a href="fr-football.html">Français</a></li>
+                       <!-- <li class="scroll"><a href="#services">Services</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="scroll"><a href="#about">About</a></li>
                         <li class="scroll"><a href="#meet-team">Team</a></li>
