--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,7 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="index.html">Home</a></li>
+                         <li class="scroll"><a href="fr-gallery.html">Français</a></li>
                         <!-- <li class="scroll"><a href="#features">Features</a></li>
                         <li class="scroll"><a href="#services">Services</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
@@ -72,10 +73,10 @@
 
             <div class="text-center">
                 <ul class="portfolio-filter" style="width:100%;">
-                    <li style="width:25%; font-size: 1.5em;"><a class="active" href="#" data-filter="*">All Works</a></li>
-                    <li style="width:25%; font-size: 1.5em;"><a href="#" data-filter=".creative">HAITI</a></li>
-                    <li style="width:25%; font-size: 1.5em;"><a href="#" data-filter=".corporate">SPORT</a></li>
-                    <li style="width:25%; font-size: 1.5em;"><a href="#" data-filter=".portfolio">EVENTS</a></li>
+                    <li style="width:25%;"><a class="active" href="#" data-filter="*">All Works</a></li>
+                    <li style="width:25%;"><a href="#" data-filter=".creative">HAITI</a></li>
+                    <li style="width:25%;"><a href="#" data-filter=".corporate">SPORT</a></li>
+                    <li style="width:25%;"><a href="#" data-filter=".portfolio">EVENTS</a></li>
                     <!-- <div class="carousel-content" style="
     display: inline-block;
 "><a class="btn btn-primary btn-lg" href="gallery.html" target="_blank" style="
