--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li class="scroll"><a href="#meet-team">Speakers</a></li>
                         <li class="scroll"><a href="team.html">Team</a></li>
                         <li class="scroll"><a href="#blog">Info</a></li> 
-                        <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
+                        <li class="scroll"><a href="fr-index.html">French</a></li>                        
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -240,7 +240,7 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading"><a href="football.html">GRENADIERS FOOTBALL CLUB</a></h4>
-                                <p>he Grenadiers Football Club was established in Toronto in October 2013. The Club is composed of male athletes.</p>
+                                <p>The Grenadiers Football Club was established in Toronto in October 2013. The Club is composed of male athletes.</p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -318,7 +318,7 @@
 
             <div class="text-center">
                 <ul class="portfolio-filter">
-                    <li><a class="active" href="#" data-filter="*">All Works</a></li>
+                    <li><a class="active" href="#" data-filter="*">All</a></li>
                     <li><a href="#" data-filter=".creative">Events</a></li>
                     <li><a href="#" data-filter=".corporate">Haiti</a></li>
                     <li><a href="#" data-filter=".portfolio">Sport</a></li>
@@ -1099,7 +1099,7 @@ varieties of cultural background together.</p>
 
 
     <section id="contact">
-        <div id="google-map" style="height:650px" data-latitude="52.365629" data-longitude="4.871331"></div>
+        <div id="google-map" style="height:650px" data-latitude="43.71031" data-longitude="-79.571362"></div>
         <div class="container-wrapper">
             <div class="container">
                 <div class="row">
