--- a/event-forum.html
+++ b/event-forum.html
@@ -47,7 +47,7 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="index.html">Home</a></li>
-                                             
+                                <li class="scroll"><a href="fr-event-forum.html">Français</a></li>                  
                     </ul>
                 </div>
             </div><!--/.container-->
