--- a/sponsor.html
+++ b/sponsor.html
@@ -47,6 +47,7 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="index.html">Home</a></li>
+                        <li class="scroll"><a href="fr-sponsor.html">Français</a></li>
                         <!-- <li class="scroll"><a href="#features">Features</a></li>
                         <li class="scroll"><a href="#services">Services</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
