--- a/fr-index.html
+++ b/fr-index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div><!--/.item-->
-             <div class="item" style="background-image: url(images/slider/bg2.jpg);">
+             <div class="item" style="background-image: url(images/slider/bg2.png);">
                 <div class="slider-inner">
                     <div class="container">
                         <div class="row">
